index/index.css
:root {
    --main-color: #2a2525;
    --alt-color: #433b3b;
    --volcano-gold: #dd8133;
    --hover-gold: #ac6323;
}

html, body {
    scroll-behavior: smooth;
    min-height: 100%;
    overflow-x: hidden;
}

body {
    display: flex;
    flex-direction: column;
    background-color: var(--main-color);
    color: white;
    margin: 0;
    font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
}

#header {
    display: flex;
    align-items: center; justify-content: flex-end;
    font-size: 20px;
    width: 100%;
    z-index: 1;
    transition-duration: 0.4s;
    box-shadow: 0px 8px 16px 0px rgba(0, 0, 0, 0.);
}

#header > .logo {
    display: flex;
    max-width: 160px; height: auto;
    margin: 0 auto 0 0;
    padding: 20px;
}

.header-buttons {
    margin-right: 20px;
}

.header-buttons a {
    background-color: transparent;
    color: white;
    font-size: 18px;
    border: none;
    padding: 10px;
    text-decoration: none;
}

.header-buttons a:hover {filter: blur(0.035rem);}

.sticky {
    position: fixed;
    top: 0;
    width: 100%;
    background-color: var(--main-color);
}

.sticky + .content {
    padding-top: 62.44px;
}

.dropdown {
    position: relative;
    display: inline-block;
}

.dd-btn {color: white; text-decoration: none; transition-duration: 0.2s; font-size: 18px; cursor: pointer;}

.dd-content {
    display: none;
    position: absolute;
    min-width: 160px;
    margin-top: 8px;
    border-radius: 10px;
    background-color: var(--main-color);
    left: -30px;
    box-shadow: 0px 8px 16px 0px rgba(0, 0, 0, 0.2);
    z-index: 1;
    opacity: 0;
    transition-duration: 0.2s;
    transition-behavior: allow-discrete;
}

.dd-content > a {
    color: white;
    text-decoration: none;
    padding: 12px 16px;
    font-size: 18px;
    display: block;
    transition-duration: 0.4s;
}

.dd-content a:hover {
    background-color: var(--alt-color);
    border-radius: 10px;
}

.dropdown:hover .dd-content {display: block; opacity: 1;}

#order-btn {
    background-color: var(--volcano-gold);
    border-radius: 15px;
    padding: 5px 15px;
    font-size: 18px;
    border: none;
    color: white;
    cursor: pointer;
    min-height: 40px; min-width: 110px;
    transition-duration: 0.3s;
}

#order-btn:hover {
    background-color: var(--hover-gold);
    border-radius: 8px;
}


#hero {
    display: flex; flex-direction: column;
    justify-content: center;
    z-index: -1;
    /* min-height: 100%; */
    height: 100vh;
}

#hero-video {
    position: absolute;
    top: 0; right: 0; bottom: 0; left: 0; opacity: 0.4;
    min-height: 100vh; min-width: 1100px;
    filter: blur(3px);
    z-index: -1;
}

#hero-content {
    display: flex; flex-direction: column;
    position: relative;
    margin-bottom: 160px; margin-left: 30px; margin-right: 30px;
    justify-content: center; align-items: center;
    color: var(--volcano-gold);
}

#hero-content > .logo {
    width: 100%; height: auto; max-width: 600px;
    margin-bottom: 40px; margin-top: 120px;
    filter: drop-shadow(5px 5px 0.75rem black);
}

#about {
    display: flex;
    align-items: center; justify-content: center;
    width: 100%; height: 100vh;
    background-color: var(--alt-color);
}

.about-content {
    display: flex; flex-direction: column;
    align-items: center; justify-content: center;
    max-width: 540px;
    font-size: 18px;
    margin: 80px;
}

.about-content h1 {font-size: 28px; color: var(--volcano-gold);}

.about-content img {
    max-width: 540px;
    margin: 20px;
    box-shadow: 0px 8px 16px 0px rgba(0, 0, 0, 0.8);
}

.contact {
    width: 100%; min-height: 500px;
    background-color: var(--main-color);
}



/* .col-btn {
    width: 100%; max-width: 300px; max-height: auto;
    padding: 1rem;
    position: relative;
    background: linear-gradient(to right, var(--volcano-gold), var(--hover-gold));
    padding: 4px;
} */

.footer {
    display: flex; flex-direction: column;
    justify-content: center;
    min-height: 46px; width: 100%;
    background-color: var(--volcano-gold);
    position: relative; bottom: 0; left: 0;
    padding: 6px;
    text-align: center;
}

.footer-titles {
    display: flex; flex-direction: row;
    justify-content: space-evenly;
    margin-top: 20px;
    max-width: 50vw;
}

.footer > .footer-sections {
    display: flex; flex-direction: horizontal;
}

#social-media {
    margin: 12px;
}

.hs-social-media > a {
    color: white;
    font-size: 20px;
    margin: 4px;
}

.hs-copyright {
    margin: 12px;
    align-self: flex-start;
}

